--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     <button id="clear-completed">Clear completed (<%= completed %>)</button>
     <% } %>
   </script>
-  
-  <script src="js/lib/jquery-1.9.1.min.js"></script>
-  <script src="js/lib/underscore-min.js"></script>
-  <script src="js/lib/backbone-min.js"></script>
-  <script src="js/lib/backbone.localStorage-min.js"></script>
-  <script src="js/models/todo.js"></script>
-  <script src="js/collections/todos.js"></script>
-  <script src="js/views/todos.js"></script>
-  <script src="js/views/app.js"></script>
-  <script src="js/routers/router.js"></script>
-  <script src="js/app.js"></script>
+
+  <script src="assets/js/lib/jquery-1.9.1.min.js"></script>
+  <script src="assets/js/lib/underscore-min.js"></script>
+  <script src="assets/js/lib/backbone-min.js"></script>
+  <script src="assets/js/lib/backbone.localStorage-min.js"></script>
+  <script src="assets/js/models/todo.js"></script>
+  <script src="assets/js/collections/todos.js"></script>
+  <script src="assets/js/views/todos.js"></script>
+  <script src="assets/js/views/app.js"></script>
+  <script src="assets/js/routers/router.js"></script>
+  <script src="assets/js/app.js"></script>
 
   <section id="todoapp">
     <header id="header">
